Autenticacion de usuario

--- a/views/iniciar-sesion.handlebars
+++ b/views/iniciar-sesion.handlebars
@@ -2,7 +2,7 @@
     <form action="/iniciar-sesion" class="default-form" method="POST">
         <div class="campo">
             <label for="email">Email</label>
-            <input type="email" placeholder="Ingresa tu email" required>
+            <input type="email" name="email" placeholder="Ingresa tu email" required>
         </div>
         <div class="campo">
             <label for="password">Contraseña</label>
