--- a/views/editar-vacante.handlebars
+++ b/views/editar-vacante.handlebars
@@ -47,7 +47,7 @@
         </ul>
 
         <div class="campo centrar-horizontal">
-            <input type="text" name="skills" id="skills">
+            <input type="hidden" name="skills" id="skills">
             <input type="submit" value="Actualizar" class="btn btn-azul">
         </div>
     </form>
