--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -27,6 +27,18 @@
             </form>
         </div>
         {{/if}}
+
+        {{#if cerrarSesion}}
+            <div class="cerrar-sesion">
+                <p>Hola! {{nombre}}</p>
+                <a href="/administracion">Panel de administración</a>
+                <a href="/cerrar-sesion">Cerrar sesión</a>
+            </div>
+        {{/if}}
+
+
+
+
     </div>
     <header class="site-header contenedor separador">
         <h2>{{nombrePagina}}</h2>
