--- a/views/editar-perfil.handlebars
+++ b/views/editar-perfil.handlebars
@@ -2,15 +2,16 @@
     <form action="/editar-perfil" method="POST" class="default-form">
         <div class="campo">
             <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" placeholder="Ingresa tu nombre" value="{{usuario.nombre}}">
+            <input type="text" name="nombre" placeholder="Ingresa tu nombre" value="{{usuario.nombre}}" required>
         </div>
         <div class="campo">
             <label for="email">Email</label>
-            <input type="text" name="email" placeholder="Ingresa tu correo" value="{{usuario.email}}">
+            <input type="text" name="email" placeholder="Ingresa tu correo" value="{{usuario.email}}" required>
         </div>
         <div class="campo">
             <label for="password">Contraseña</label>
-            <input type="password" name="password" placeholder="Ingresa la nueva contraseña solo si deseas actualizarla" id="UsuarioContrasenia">
+            <input type="password" name="password" placeholder="Ingresa la nueva contraseña solo si deseas actualizarla"
+                id="UsuarioContrasenia">
         </div>
         <div class="campo">
             <label for="passwordRepetido">Repetir contraseña</label>
