--- a/views/nueva-vacante.handlebars
+++ b/views/nueva-vacante.handlebars
@@ -3,15 +3,15 @@
         <h3>Información general</h3>
         <div class="campo">
             <label for="titulo">Titulo</label>
-            <input type="text" name="titulo" placeholder="Ej: React developer" >
+            <input type="text" name="titulo" placeholder="Ej: React developer" required>
         </div>
         <div class="campo">
             <label for="empresa">Empresa</label>
-            <input type="text" name="empresa" placeholder="Nombre de la empresa contratante" >
+            <input type="text" name="empresa" placeholder="Nombre de la empresa contratante" required>
         </div>
         <div class="campo">
             <label for="ubicacion">Ubicación</label>
-            <input type="text" name="ubicacion" placeholder="Ej:  La Paz - Bolivia ó Remoto" >
+            <input type="text" name="ubicacion" placeholder="Ej:  La Paz - Bolivia ó Remoto" required>
         </div>
         <div class="campo">
             <label for="salario">Salario</label>
