--- a/views/vacante.handlebars
+++ b/views/vacante.handlebars
@@ -33,3 +33,35 @@
         </ul>
     </aside>
 </div>
+<div class="contenedor datos-reclutador">
+    <div class="enviar-datos">
+        <h2>Contactar reclutador</h2>
+        <p>Llena el siguiente formulario, sube tu CV y pronto te conectaremos</p>
+        <form action="/vacante/{{vacante.url}}" method="POST" class="default-form" enctype="multipart/form-data">
+            <div class="campo">
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre" placeholder="Tu nombre">
+            </div>
+            <div class="campo">
+                <label for="email">Correo</label>
+                <input type="email" name="email" placeholder="Tu correo electrónico">
+            </div>
+            <div class="campo">
+                <label for="CV">CV(PDF)</label>
+                <input type="file" name="CV">
+            </div>
+            <div class="campo">
+                <input type="submit" placeholder="Enviar" class="btn btn-verde">
+            </div>
+        </form>
+    </div>
+    <div class="info-reclutador">
+        <h2>Información Reclutador</h2>
+        {{#if vacante.autor.nombre}}
+        <p>{{vacante.autor.nombre}}</p>
+        {{/if}}
+        {{#if vacante.autor.imagen}}
+        <img src="/uploads/perfiles/{{vacante.autor.imagen}}" alt="Perfil">
+        {{/if}}
+    </div>
+</div>
